--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>GlaceYT</title>
     <style>
         body {
-            background-image: url('https://cdn.discordapp.com/attachments/1170652474563117138/1224660177039396876/MULTI_MUSIC_v1.5.png?ex=661e4cab&is=660bd7ab&hm=f7a542462fabaf9c1530ece5aa72597cff3ac032876bba46df5ddba7e122ea99&');
+            background-image: url('https://cdn.discordapp.com/attachments/1224961328943468614/1228653855642877962/jdo.theme.css.gif?ex=6634bd12&is=66336b92&hm=5ab7acb9fc11cc8579c8759632a4a1d7d828569d7d3fede5026398c6b80c7d3c&');
             background-size: cover;
             background-repeat: no-repeat;
             margin: 0;
