--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>GlaceYT</title>
     <style>
         body {
-            background-image: url('https://cdn.discordapp.com/attachments/1224961328943468614/1228653855642877962/jdo.theme.css.gif?ex=6634bd12&is=66336b92&hm=5ab7acb9fc11cc8579c8759632a4a1d7d828569d7d3fede5026398c6b80c7d3c&');
+            background-image: url('https://cdn.discordapp.com/attachments/1224961328943468614/1235736065030094929/istockphoto-1076840920-612x612.png?ex=66357464&is=663422e4&hm=f9a9d530218ff56cb784ae1cfddeb2c5dadcf9247e3f068c357145d22442bd41&');
             background-size: cover;
             background-repeat: no-repeat;
             margin: 0;
